--- a/Gravity.UI/MainWindow.xaml
+++ b/Gravity.UI/MainWindow.xaml
@@ -20,46 +20,58 @@
         </Grid.RowDefinitions>
         <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Dynamic Body Position" VerticalAlignment="Top" FontSize="18" Grid.Row="1"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Static Body Position" VerticalAlignment="Top" FontSize="18"/>
-        <Label Content="X:" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" AutomationProperties.Name="StaticXLabel"/>
-        <Label Content="Y:" HorizontalAlignment="Left" Margin="10,91,0,0" VerticalAlignment="Top" AutomationProperties.Name="StaticYLabel"/>
-        <TextBox HorizontalAlignment="Left" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="138" AutomationProperties.Name="StaticX" Margin="36,0,0,0"/>
-        <TextBox HorizontalAlignment="Left" Margin="36,95,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="138" AutomationProperties.Name="StaticY"/>
-        <Label Content="X:" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" AutomationProperties.Name="DynamicXLabel" Grid.Row="1"/>
-        <TextBox HorizontalAlignment="Left" Margin="41,0,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Center" Width="133" AutomationProperties.Name="DynamicX" Grid.Row="1"/>
-        <Label Content="Y:" HorizontalAlignment="Left" Margin="10,91,0,0" VerticalAlignment="Top" AutomationProperties.Name="DynamicYLabel" Grid.Row="1"/>
-        <TextBox HorizontalAlignment="Left" Margin="41,95,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="133" AutomationProperties.Name="DynamicY" Grid.Row="1"/>
+        <Label Content="X:" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Name="StaticXLabel"/>
+        <Label Content="Y:" HorizontalAlignment="Left" Margin="10,91,0,0" VerticalAlignment="Top" Name="StaticYLabel"/>
+        <TextBox HorizontalAlignment="Left" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="138" Name="StaticX" Margin="36,0,0,0"/>
+        <TextBox HorizontalAlignment="Left" Margin="36,95,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="138" Name="StaticY"/>
+        <Label Content="X:" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Name="DynamicXLabel" Grid.Row="1"/>
+        <TextBox HorizontalAlignment="Left" Margin="41,0,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Center" Width="133" Name="DynamicX" Grid.Row="1"/>
+        <Label Content="Y:" HorizontalAlignment="Left" Margin="10,91,0,0" VerticalAlignment="Top" Name="DynamicYLabel" Grid.Row="1"/>
+        <TextBox HorizontalAlignment="Left" Margin="41,95,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="133" Name="DynamicY" Grid.Row="1"/>
         <Label HorizontalAlignment="Left" Margin="174,0,0,0" Content="m" VerticalAlignment="Center" Grid.Row="1"/>
         <Label HorizontalAlignment="Left" Margin="174,91,0,0" Content="m" VerticalAlignment="Top" Grid.Row="1"/>
         <Label HorizontalAlignment="Left" Margin="174,0,0,0" Content="m" VerticalAlignment="Center"/>
-        <Label HorizontalAlignment="Left" Margin="174,90,0,0" Content="m" VerticalAlignment="Top"/>
-        <Canvas Grid.ColumnSpan="2" Background="Black" Grid.Column="1" Grid.RowSpan="2" AutomationProperties.Name="GravityCanvas"/>
+        <Label HorizontalAlignment="Left" Margin="174,91,0,0" Content="m" VerticalAlignment="Top"/>
+        <Canvas Grid.ColumnSpan="2" Background="Black" Grid.Column="1" Grid.RowSpan="2" Name="GravityCanvas"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18"><Run Text="Body Masses"/><LineBreak/><Run/></TextBlock>
         <Label Content="Static Body Mass:" HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="2" VerticalAlignment="Center"/>
         <Label Content="Dynamic Body Mass:" HorizontalAlignment="Left" Margin="10,91,0,0" Grid.Row="2" VerticalAlignment="Top"/>
-        <TextBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="134,0,0,0" Grid.Row="2" TextWrapping="Wrap" Text="10,000,000" VerticalAlignment="Center" Width="105" AutomationProperties.Name="StaticMass"/>
-        <TextBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="134,95,0,0" Grid.Row="2" TextWrapping="Wrap" Text="10,000,000" VerticalAlignment="Top" Width="105" AutomationProperties.Name="DynamicMass"/>
-        <Label Content="kg" HorizontalAlignment="Left" Margin="44,0,0,0" Grid.Row="2" VerticalAlignment="Center" Grid.Column="1"/>
-        <Label Content="kg" HorizontalAlignment="Left" Margin="44,91,0,0" Grid.Row="2" VerticalAlignment="Top" Grid.Column="1"/>
+        <TextBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="134,0,0,0" Grid.Row="2" TextWrapping="Wrap" Text="10,000,000" VerticalAlignment="Center" Width="105" Name="StaticMass"/>
+        <TextBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="134,96,0,0" Grid.Row="2" TextWrapping="Wrap" Text="10,000,000" VerticalAlignment="Top" Width="105" Name="DynamicMass"/>
+        <Label Content="kg" HorizontalAlignment="Left" Margin="244,0,0,0" Grid.Row="2" VerticalAlignment="Center" Grid.ColumnSpan="2"/>
+        <Label Content="kg" HorizontalAlignment="Left" Margin="244,91,0,0" Grid.Row="2" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
         <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="100,15,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Initial Properties" VerticalAlignment="Top" Grid.ColumnSpan="2" Width="134" FontSize="18"/>
         <Label Grid.Column="1" Content="Direction:" HorizontalAlignment="Left" Margin="100,0,0,0" Grid.Row="2" VerticalAlignment="Center"/>
         <Label Grid.Column="1" Content="Time of Collision:" HorizontalAlignment="Left" Margin="100,91,0,0" Grid.Row="2" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-        <TextBlock Grid.Column="1" HorizontalAlignment="Center" Grid.Row="2" TextWrapping="Wrap" Text="(1,0)" VerticalAlignment="Center" Grid.ColumnSpan="2" Width="66" AutomationProperties.Name="DirectionText"/>
-        <TextBlock Grid.Column="2" HorizontalAlignment="Left" Margin="6,97,0,0" Grid.Row="2" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="79" AutomationProperties.Name="CollisionTimeText"/>
+        <TextBlock Grid.Column="1" HorizontalAlignment="Center" Grid.Row="2" TextWrapping="Wrap" Text="0°" VerticalAlignment="Center" Grid.ColumnSpan="2" Width="66" Name="DirectionText"/>
+        <TextBlock Grid.Column="2" HorizontalAlignment="Left" Margin="6,96,0,0" Grid.Row="2" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="79" Name="CollisionTimeText"/>
         <Label Grid.Column="2" Content="Initial Distance:" HorizontalAlignment="Left" Margin="33,0,0,0" Grid.Row="2" VerticalAlignment="Center"/>
         <TextBlock Grid.Column="2" HorizontalAlignment="Left" Margin="128,0,0,0" Grid.Row="2" TextWrapping="Wrap" Text="1 m" VerticalAlignment="Center" Width="92" Grid.ColumnSpan="2"/>
         <TextBlock Grid.Column="3" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.152,0.748" FontSize="18" Height="22" Width="99"><Run Text="Simulation"/><LineBreak/><Run/></TextBlock>
-        <Button Grid.Column="3" Content="Run Simulation" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Background="#FF58C755" AutomationProperties.Name="RunButton"/>
-        <Button Grid.Column="3" Content="End" HorizontalAlignment="Left" Margin="140,0,0,0" VerticalAlignment="Center" Background="#FFF55C5C" AutomationProperties.Name="EndButton"/>
-        <Button Grid.Column="3" Content="Pause" HorizontalAlignment="Left" Margin="100,0,0,0" VerticalAlignment="Center" AutomationProperties.Name="PauseButton"/>
-        <TextBlock Grid.Column="3" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Simulation Status" VerticalAlignment="Top" FontSize="18"/>
+        <Button Grid.Column="3" Content="Run Simulation" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Background="#FF58C755" Name="RunButton"/>
+        <Button Grid.Column="3" Content="End" HorizontalAlignment="Left" Margin="140,0,0,0" VerticalAlignment="Center" Background="#FFF55C5C" Name="EndButton"/>
+        <Button Grid.Column="3" Content="Pause" HorizontalAlignment="Left" Margin="100,0,0,0" VerticalAlignment="Center" Name="PauseButton"/>
+        <TextBlock Grid.Column="3" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Status" VerticalAlignment="Top" FontSize="18"/>
         <Button Grid.Column="3" Content="Skip to Time" HorizontalAlignment="Left" Margin="10,104,0,0" VerticalAlignment="Top" Background="#FFDEC4FF"/>
-        <TextBox Grid.Column="3" HorizontalAlignment="Left" Margin="85,105,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="50"/>
-        <ComboBox Grid.Column="3" HorizontalAlignment="Left" Margin="140,102,0,0" VerticalAlignment="Top" Width="50" Height="24">
+        <TextBox Grid.Column="3" HorizontalAlignment="Left" Margin="85,105,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="50" Name="TimeSkipTextBox"/>
+        <ComboBox Grid.Column="3" HorizontalAlignment="Left" Margin="140,103,0,0" VerticalAlignment="Top" Width="50" Height="24" Name="TimeUnitCombo">
             <ComboBoxItem Content="s" IsSelected="True"/>
             <ComboBoxItem Content="m"/>
             <ComboBoxItem Content="hrs"/>
             <ComboBoxItem Content="d"/>
             <ComboBoxItem Content="y"/>
         </ComboBox>
+        <Label Grid.Column="3" Content="Time:" HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="1" VerticalAlignment="Center"/>
+        <Label Grid.Column="3" Content="Position:" HorizontalAlignment="Left" Margin="10,91,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <TextBlock Grid.Column="3" HorizontalAlignment="Left" Margin="53,0,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Center" Width="134" Text="0 sec" Name="TimeText"/>
+        <TextBlock Grid.Column="3" HorizontalAlignment="Left" Margin="70,96,0,0" Grid.Row="1" TextWrapping="Wrap" Text="(1, 0)" VerticalAlignment="Top" Width="120" Name="PositionText"/>
+        <Label Grid.Column="3" Content="Speed:" HorizontalAlignment="Left" Margin="10,123,0,0" Grid.Row="1" VerticalAlignment="Top" Grid.RowSpan="2"/>
+        <Label Grid.Column="3" Content="Acceleration:" HorizontalAlignment="Left" Margin="10,161,0,0" Grid.Row="1" VerticalAlignment="Top" Grid.RowSpan="2"/>
+        <Label Grid.Column="3" Content="Distance:" HorizontalAlignment="Left" Margin="10,199,0,0" Grid.Row="1" VerticalAlignment="Top" Grid.RowSpan="2"/>
+        <Label Grid.Column="3" Content="Framerate:" HorizontalAlignment="Left" Margin="10,237,0,0" Grid.Row="1" VerticalAlignment="Top" Grid.RowSpan="2"/>
+        <TextBlock Grid.Column="3" HorizontalAlignment="Left" Margin="61,128,0,0" Grid.Row="1" TextWrapping="Wrap" Text="0 m/s" VerticalAlignment="Top" Grid.RowSpan="2" Name="SpeedText"/>
+        <TextBlock Grid.Column="3" HorizontalAlignment="Left" Margin="93,23,0,0" Grid.Row="2" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Name="AccelerationText" Width="94"/>
+        <TextBlock Grid.Column="3" HorizontalAlignment="Left" Grid.Row="2" TextWrapping="Wrap" Text="1 m" VerticalAlignment="Top" Margin="73,61,0,0" x:Name="DistanceText" Width="114"/>
+        <TextBlock Grid.Column="3" HorizontalAlignment="Left" Margin="81,99,0,0" Grid.Row="2" TextWrapping="Wrap" Text="0 fps" VerticalAlignment="Top" x:Name="FramerateText" Width="106"/>
     </Grid>
 </Window>
