--- a/Gravity.UI/MainWindow.xaml
+++ b/Gravity.UI/MainWindow.xaml
@@ -32,7 +32,7 @@
         <Label HorizontalAlignment="Left" Margin="174,91,0,0" Content="m" VerticalAlignment="Top" Grid.Row="1"/>
         <Label HorizontalAlignment="Left" Margin="174,58,0,0" Content="m" VerticalAlignment="Top"/>
         <Label HorizontalAlignment="Left" Margin="174,91,0,0" Content="m" VerticalAlignment="Top"/>
-        <Canvas Grid.ColumnSpan="2" Background="Black" Grid.Column="1" Grid.RowSpan="2" Name="GravityCanvas"/>
+        <Canvas Grid.ColumnSpan="2" Background="Black" Grid.Column="1" Grid.RowSpan="2" Name="GravityCanvas" Loaded="GravityCanvas_Loaded"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18"><Run Text="Body Masses"/><LineBreak/><Run/></TextBlock>
         <Label Content="Static Body Mass:" HorizontalAlignment="Left" Margin="10,61,0,0" Grid.Row="2" VerticalAlignment="Top"/>
         <Label Content="Dynamic Body Mass:" HorizontalAlignment="Left" Margin="10,91,0,0" Grid.Row="2" VerticalAlignment="Top"/>
